--- a/templates/sponsor_influencers.html
+++ b/templates/sponsor_influencers.html
@@ -22,6 +22,9 @@
                     <a class="nav-link" href="/sponsor_ad_requests/{{ username }}">Ad Requests</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/sponsor_campaign_requests/{{ username }}">Campaign Requests</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                 </li>
             </ul>
