--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -22,16 +22,16 @@
     <div class="navbar-brand-centered">Admin Dashboard</div>
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
+            
             <li class="nav-item">
-                <a class="nav-link" href="#">Info</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Find</a>
+                <a class="nav-link" href="{{ url_for('find_all') }}">Find</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('stats') }}">Stats</a>
             </li>
-            
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('info') }}">Info</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
             </li>
