--- a/templates/influencer_dashboard.html
+++ b/templates/influencer_dashboard.html
@@ -18,8 +18,11 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('active_campaigns', username=username) }}">Active Campaigns</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('ad_requests', username=username) }}">Ad Requests</a>
+            </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Ad Requests</a>
+                <a class="nav-link" href="/influencer_campaign_requests/{{ username }}">Campaign Requests</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
