--- a/templates/sponsor_campaign_requests.html
+++ b/templates/sponsor_campaign_requests.html
@@ -13,28 +13,31 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #b3b3ff;">
-    <a class="navbar-brand" href="/sponsor_dashboard/{{ username }}">Sponsor Dashboard</a>
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="/sponsor_campaigns/{{ username }}">Campaigns</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/sponsor_influencers/{{ username }}">Influencers</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/sponsor_ad_requests/{{ username }}">Ad Requests</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/sponsor_campaign_requests/{{ username }}">Campaign Requests</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #b3b3ff;">
+        <a class="navbar-brand" href="/sponsor_dashboard/{{ username }}">Sponsor Dashboard</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/sponsor_campaigns/{{ username }}">Campaigns</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('active_campaigns_sponsor', username=username) }}">Active Campaigns</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sponsor_influencers/{{ username }}">Influencers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sponsor_ad_requests/{{ username }}">Ad Requests</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sponsor_campaign_requests/{{ username }}">Campaign Requests</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
 <div class="container mt-4">
     <div class="row">
@@ -52,7 +55,13 @@
                                     <p class="mb-1">Payment Amount: {{ request.payment_amount }}</p>
                                     <p class="mb-1">Status: {{ request.status }}</p>
                                     <p class="mb-1">Created At: {{ request.created_at }}</p>
-                                    
+                                    <p class="mb-1">Payment Status: {{ request.payment }}</p>
+                                    {% if request.status == 'Completed' %}
+                                        <form action="{{ url_for('confirm_payment', request_id=request.id) }}" method="POST">
+                                            <input type="hidden" name="username" value="{{ username }}">
+                                            <button type="submit" class="btn btn-success">Make Payment</button>
+                                        </form>
+                                    {% endif %}
                                 </div>
                             {% endfor %}
                         {% else %}
