--- a/templates/sponsor_campaigns.html
+++ b/templates/sponsor_campaigns.html
@@ -17,6 +17,9 @@
                     <a class="nav-link" href="/sponsor_campaigns/{{ username }}">Campaigns</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('active_campaigns_sponsor', username=username) }}">Active Campaigns</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/sponsor_influencers/{{ username }}">Influencers</a>
                 </li>
                 <li class="nav-item">
