--- a/templates/sponsor_dashboard.html
+++ b/templates/sponsor_dashboard.html
@@ -13,28 +13,31 @@
     </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #b3b3ff;">
-    <a class="navbar-brand" href="/sponsor_dashboard/{{ username }}">Sponsor Dashboard</a>
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="/sponsor_campaigns/{{ username }}">Campaigns</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/sponsor_influencers/{{ username }}">Influencers</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/sponsor_ad_requests/{{ username }}">Ad Requests</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/sponsor_campaign_requests/{{ username }}">Campaign Requests</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #b3b3ff;">
+        <a class="navbar-brand" href="/sponsor_dashboard/{{ username }}">Sponsor Dashboard</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/sponsor_campaigns/{{ username }}">Campaigns</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('active_campaigns_sponsor', username=username) }}">Active Campaigns</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sponsor_influencers/{{ username }}">Influencers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sponsor_ad_requests/{{ username }}">Ad Requests</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/sponsor_campaign_requests/{{ username }}">Campaign Requests</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
 <div class="container mt-4">
     <div class="row">
