fixed few issues

--- a/templates/sponsor_active_campaigns.html
+++ b/templates/sponsor_active_campaigns.html
@@ -52,6 +52,7 @@
                                     <strong>Status:</strong> {{ campaign.status }}<br>
                                     <strong>Goals:</strong> {{ campaign.goals }}<br>
                                     <!-- Add other campaign details if needed -->
+                                    <!-- If you need to display the sponsor company name or other details, include them here -->
                                 </p>
                             </div>
                         </div>
@@ -66,5 +67,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    </body>
-    </html>
+</body>
+</html>
