--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,40 @@
         {% block content %}{% endblock %}
     </div>
     
+    <!-- Footer -->
+    <footer class="footer mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h5><i class="fas fa-bullhorn mr-2"></i>Ad-Easy</h5>
+                    <p>Connecting brands with influencers for impactful campaigns.</p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Quick Links</h5>
+                    <ul class="footer-links">
+                        <li><a href="/"><i class="fas fa-home mr-1"></i> Home</a></li>
+                        <li><a href="#"><i class="fas fa-info-circle mr-1"></i> About</a></li>
+                        <li><a href="#"><i class="fas fa-question-circle mr-1"></i> FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h5>Connect With Us</h5>
+                    <div class="social-icons">
+                        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-12 text-center">
+                    <p class="copyright">© 2023 Ad-Easy. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
     <!-- Bootstrap JS and dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
