feat: add dark mode toggle and page loader
- Add dark mode toggle button to navbar
- Implement page loading animation with spinner
- Add footer styles with social icons and links
- Fix typo in JavaScript file comment

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,12 +22,18 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
+                <!-- In the navbar -->
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="/"><i class="fas fa-home mr-1"></i> Home</a>
                     </li>
                     <!-- Add more links here as needed -->
                 </ul>
+                <li class="nav-item">
+                    <button id="darkModeToggle" class="btn btn-sm nav-link">
+                        <i class="fas fa-moon"></i>
+                    </button>
+                </li>
             </div>
         </div>
     </nav>
